fixed floading Bill Murray head issue, still need to resolve top bar alignment in smallest viewport

--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -86,9 +86,7 @@
 		float: right;
 		.byline { 
 			float: none;
-			img {
-				text-align: center;
-			}
+			text-align: center;
 		}
 
 
